Regenerate and migrate to JHipster 8.9.0